Move files in their rightful directories

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -20,7 +20,7 @@
     <script src="/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="/js/mobile-angular-ui.gestures.min.js"></script>
-    <script src="/app.js"></script>
+    <script src="/js/app.js"></script>
   </head>
 
   <body
@@ -29,7 +29,7 @@
             ui-prevent-touchmove-defaults>
 
     <!-- Sidebars -->
-    <div ng-include="'sidebar.html'"
+    <div ng-include="'pages/sidebar.html'"
          ui-track-as-search-param='true'
          class="sidebar sidebar-left"></div>
 
