--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -18,8 +18,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.2/angular-resource.min.js"></script>
     <script src="/js/mobile-angular-ui.min.js"></script>
-    <!-- Required to use $touch, $swipe, $drag and $translate services -->
-    <script src="/js/mobile-angular-ui.gestures.min.js"></script>
     <script src="/js/app.js"></script>
   </head>
 
@@ -33,10 +31,7 @@
          ui-track-as-search-param='true'
          class="sidebar sidebar-left"></div>
 
-    <!-- Activate swiping motions -->
-    <div class="app"
-         ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
-         ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
+    <div class="app">
 
       <!-- Navbars -->
       <div class="navbar navbar-app navbar-absolute-top">
