--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -18,6 +18,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.2/angular-resource.min.js"></script>
     <script src="/js/mobile-angular-ui.min.js"></script>
+    <script src="/js/services.js"></script>
+    <script src="/js/controllers.js"></script>
     <script src="/js/app.js"></script>
   </head>
 
