Include authentication framework

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -17,6 +17,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.2/angular-resource.min.js"></script>
+    <!--[if lte IE 9]><!-- Required by satellizer for IE9 support -->
+      <script src="//cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js"></script>
+    <![endif]-->
+    <script src="//cdn.jsdelivr.net/satellizer/0.14.0/satellizer.min.js"></script>
     <script src="/js/mobile-angular-ui.min.js"></script>
     <script src="/js/services.js"></script>
     <script src="/js/controllers.js"></script>
