--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -23,13 +23,16 @@
     <script src="//cdn.jsdelivr.net/satellizer/0.14.0/satellizer.min.js"></script>
     <script src="/js/mobile-angular-ui.min.js"></script>
     <script src="/js/services.js"></script>
-    <script src="/js/controllers.js"></script>
+    <script src="/js/controllers/main.js"></script>
+    <script src="/js/controllers/home.js"></script>
+    <script src="/js/controllers/myschedule.js"></script>
+    <script src="/js/controllers/comingdays.js"></script>
     <script src="/js/app.js"></script>
   </head>
 
   <body
             ng-app="GraceKBHVolunteers"
-            ng-controller="MainController"
+            ng-controller="MainCtrl"
             ui-prevent-touchmove-defaults>
 
     <!-- Sidebars -->
