--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -17,6 +17,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.2/angular-resource.min.js"></script>
+    <script src="//https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.2/angular-messages.min.js"></script>
     <!--[if lte IE 9]><!-- Required by satellizer for IE9 support -->
       <script src="//cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js"></script>
     <![endif]-->
