--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="css/mobile-angular-ui-desktop.min.css" />
+    <link rel="stylesheet" href="css/grace.css" />
 
     <!-- scripts -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
@@ -25,6 +26,7 @@
     <script src="/js/mobile-angular-ui.min.js"></script>
     <script src="/js/services.js"></script>
     <script src="/js/controllers/main.js"></script>
+    <script src="/js/controllers/login.js"></script>
     <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/myschedule.js"></script>
     <script src="/js/controllers/comingdays.js"></script>
@@ -38,13 +40,14 @@
 
     <!-- Sidebars -->
     <div ng-include="'pages/sidebar.html'"
+         ng-if="!duringLogin"
          ui-track-as-search-param='true'
          class="sidebar sidebar-left"></div>
 
     <div class="app">
 
       <!-- Navbars -->
-      <div class="navbar navbar-app navbar-absolute-top">
+      <div class="navbar navbar-app navbar-absolute-top" ng-hide="duringLogin">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
           Grace KBH Volunteers
         </div>
