Add authentication workflow for both Facebook and Google

--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -36,10 +36,10 @@
           <hr>
         </div>
       </form>
-      <button class="btn btn-block btn-google" ng-click="authenticate('google')">
+      <button class="btn btn-block btn-google" ng-click="googleLogin()">
         <i class="fa fa-google"></i> Sign in with Google
       </button>
-      <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+      <button class="btn btn-block btn-facebook" ng-click="fbLogin()">
         <i class="fa fa-facebook"></i> Sign in with Facebook
       </button>
     </div>
