Display posts on home page

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -22,6 +22,8 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js"></script>
     <![endif]-->
     <script src="//cdn.jsdelivr.net/satellizer/0.14.0/satellizer.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment-with-locales.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.3/angular-moment.min.js"></script>
     <script src="/js/mobile-angular-ui.min.js"></script>
     <script src="/js/services.js"></script>
     <script src="/js/controllers/main.js"></script>
