--- a/static/pages/sidebar.html
+++ b/static/pages/sidebar.html
@@ -4,7 +4,14 @@
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/next-week">Coming days <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/my-schedule">My Schedule <i class="fa fa-chevron-right pull-right"></i></a>
+    </div>
+    <div ng-show="isAdmin" class="list-group">
+      <a class="list-group-item" href="#/new-post">Post update <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/volunteers">Manage volunteers <i class="fa fa-chevron-right pull-right"></i></a>
+    </div>
+    <div class="list-group">
+      <a ng-hide="isAuthenticated" class="list-group-item" href="#/login">Login <i class="fa fa-sign-in pull-right"></i></a>
+      <a ng-show="isAuthenticated" class="list-group-item" ng-click="logout()">Logout <i class="fa fa-sign-out pull-right"></i></a>
     </div>
   </div>
 </div>
