--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -31,6 +31,7 @@
     <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/myschedule.js"></script>
     <script src="/js/controllers/comingdays.js"></script>
+    <script src="/js/controllers/volunteers.js"></script>
     <script src="/js/app.js"></script>
   </head>
 
