Add page to edit user data

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -32,6 +32,7 @@
     <script src="/js/controllers/myschedule.js"></script>
     <script src="/js/controllers/comingdays.js"></script>
     <script src="/js/controllers/volunteers.js"></script>
+    <script src="/js/controllers/user-edit.js"></script>
     <script src="/js/app.js"></script>
   </head>
 
